# NiceServer

./: CMakeLists.txt  copy-assets.cmake
src/: main.cpp
src/http_connection/: http_handler.cpp  http_handler.h
src/pool/: thread_pool.hpp
src/server/: nice_server.cpp  nice_server.h
src/utils/: utils.cpp  utils.h
